--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
     <h2>Outras Categorias Interessantes</h2>
     <ul>
         <li>IndyCar</li>
-        <li>Rali</li>
+        <li>Rally WRC</li>
         <li>Formula E</li>
         <li>Nascar</li>
         <li>DTM (Deutsche Tourenwagen Masters)</li>
