--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,8 @@
         }
         ul {
             list-style-type: none;
+            margin-left: 0; /* Remove a margem esquerda */
+            padding-left: 0; /* Remove o preenchimento à esquerda */
         }
     </style>
 </head>
@@ -67,4 +69,3 @@
     </script>
 </body>
 </html>
-
